plugins {
    id 'org.jpos.jposapp' version '0.0.7'
    id 'idea'
}


// if (file('libraries.gradle').exists())
//   apply from: 'libraries.gradle'

allprojects {
    group = 'org.jpos.ee'
    version = '3.0.0-SNAPSHOT'
    apply plugin: 'idea'
    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
        }
    }
}

subprojects {
    if (name != 'bom') {
        apply plugin: 'java-library'
        apply plugin: 'org.jpos.jposapp'
        test {
            useJUnitPlatform() 
            testLogging {
                events "passed", "skipped", "failed"
            }
            systemProperty 'user.language', 'en'
//            if (!(System.getenv("GITHUB_ACTIONS") != null && System.getenv("GITHUB_ACTIONS") == "true" &&
//                    (OperatingSystem.current().isMacOsX() || OperatingSystem.current().isWindows()))) {
//                maxParallelForks = Runtime.runtime.availableProcessors()
//            }
        }
        dependencies {
            testImplementation testlibs.junit
            testRuntimeOnly testlibs.junitRuntime
        }
    }
    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
    repositories {
        mavenCentral()
        maven { url = uri('https://jpos.org/maven') }
        mavenLocal()
    }
    base {
        archivesName="jposee-${project.name}"
    }
}

idea {
    project {
        ipr {
            withXml {
                provider -> provider.node.component.find {
                    it.@name == 'VcsDirectoryMappings'
                }.mapping.@vcs = 'Git'
            }
        }
        languageLevel = '21'
    }
}



// apply from: 'libraries.gradle'


// buildscript {
//    repositories {
//        mavenCentral()
//    }
//    dependencies {
//        classpath 'org.owasp:dependency-check-gradle:6.1.5'
//    }
//}

//allprojects {
//    apply plugin: 'idea'
//    apply plugin: 'eclipse'
//    apply plugin: 'org.owasp.dependencycheck'

//    group = 'org.jpos.ee'
//    version = '3.0.0-SNAPSHOT'
//    gradle.projectsEvaluated {
//        tasks.withType(JavaCompile) {
//            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
//        }
//    }
//}

// subprojects {
//     apply from: "${rootProject.projectDir}/publishing.gradle"
//     if (name != 'bom') {
//         apply from: "${rootProject.projectDir}/subprojects.gradle"
//     }
// }

// Configure IDEA to use Git
// idea.project.ipr {
//  withXml { provider ->
//    provider.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping.@vcs = 'Git'
//  }
// }

